# Planet-Forge

./: .gitignore  CHANGELOG.md  README.md  bts.jsonc  nx.json  package.json  skills-lock.json
.github/workflows/: build.yml
apps/sim/: main.py  project.json  pyproject.toml
apps/sim/scripts/: bundle.js  bundle.sh
apps/sim/sim/: main.py  models.py
apps/sim/sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/sim/sim/domain/: base.py  galaxy.py  planet.py  presets.py  star.py  system.py
apps/sim/tests/: test_collisions.py  test_orbit.py  test_presets.py
apps/web/: .env.example  components.json  index.html  package.json  project.json  tsconfig.json
apps/web/src/: index.css  main.tsx
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs
apps/web/src/components/: mode-toggle.tsx
apps/web/src/features/planet-forge/: planet-forge.tsx
apps/web/src/features/planet-forge/forge/: create-planet-wizard.tsx
apps/web/src/features/planet-forge/hud/: connection-status.tsx  controller-button-hint.tsx  controller-button-map-dialog.tsx  controller-cursor.tsx  controller-indicator.tsx  info-panel.tsx  minimap.tsx  planet-view-dialog.tsx  systems-list-overlay.tsx  telemetry-debugger.tsx  toolbar.tsx
apps/web/src/features/planet-forge/lib/: api.ts  gamepad-mappings.ts  onboarding-tour.ts  planet-presets.ts  types.ts  use-controller-navigation.ts  use-cursor-visibility.ts  use-gamepad.ts  (+1 more)
apps/web/src/routes/: __root.tsx  index.tsx
docs/: formulas_documentation.md
(+14 files in other folders)
